tests/fixtures/pass/effect_callable_contract.sc
use core.control.EffectCallable

let abandon(move action: EffectCallable(i32, i32, i32)): () = { () }

let main(): i32 = { 42 }
