tests/fixtures/fail/try_non_container_operand.sc
let answer(): i32 = { 42.try }

let main(): i32 = { answer() }
